se implemento el css para todo el campo ADMIN y se agregaron los filtros para la tabla recurso

--- a/FrontMoneyMentor/src/app/components/balance/balance-list/balance-list.html
+++ b/FrontMoneyMentor/src/app/components/balance/balance-list/balance-list.html
@@ -10,7 +10,7 @@
         </ng-container>
 
         <ng-container matColumnDef="c2">
-            <th mat-header-cell *matHeaderCellDef> mes</th>
+            <th mat-header-cell *matHeaderCellDef> Mes</th>
             <td mat-cell *matCellDef="let element"> {{element.mes}} </td>
         </ng-container>
 
