--- a/FrontMoneyMentor/src/app/components/usuario/usuariolistar/usuariolistar.css
+++ b/FrontMoneyMentor/src/app/components/usuario/usuariolistar/usuariolistar.css
@@ -1,4 +1,4 @@
-/* Contenedor general */
+
 .container {
   width: 90%;
   margin: 40px auto;
@@ -8,23 +8,21 @@
   box-shadow: 0 4px 12px rgba(0,0,0,0.08);
 }
 
-/* Título */
 .container h2 {
   font-size: 28px;
   font-weight: 600;
-  color: #333;
+  color: #000000;
   margin-bottom: 20px;
 }
 
-/* Tabla */
+
 table {
   width: 100%;
   border-collapse: collapse;
 }
 
-/* Encabezados */
 th.mat-header-cell {
-  background: #1976d2;      /* Azul Material */
+  background: #1976d2;      
   color: white;
   font-weight: 600;
   font-size: 15px;
@@ -32,36 +30,33 @@ th.mat-header-cell {
   padding: 12px 10px;
 }
 
-/* Filas */
+
 td.mat-cell {
   text-align: center;
   padding: 12px 10px;
   font-size: 14px;
 }
 
-/* Hover de fila */
 tr.mat-row:hover {
   background: #f1f5f8;
   transition: 0.2s ease-in-out;
 }
 
-/* Bordes suaves */
 td.mat-cell, th.mat-header-cell {
   border-bottom: 1px solid #e2e2e2;
 }
 
-/* Espaciado entre columnas */
 td.mat-cell {
   padding: 10px;
 }
 
 button[mat-icon-button] {
-  background-color: rgb(242, 49, 35);
+  background-color: #ff8343;
   color: white;
   border-radius: 6px;
   transition: 0.25s ease;
 }
 
 button[mat-icon-button]:hover {
-  background-color: rgb(220, 40, 30);
+  background-color: #ff8343;
 }
