--- a/FrontMoneyMentor/src/app/components/impuesto/impuesto-list/impuesto-list.html
+++ b/FrontMoneyMentor/src/app/components/impuesto/impuesto-list/impuesto-list.html
@@ -10,12 +10,12 @@
         </ng-container>
 
         <ng-container matColumnDef="c2">
-            <th mat-header-cell *matHeaderCellDef> tipo</th>
+            <th mat-header-cell *matHeaderCellDef> Tipo</th>
             <td mat-cell *matCellDef="let element"> {{element.tipo}} </td>
         </ng-container>
 
         <ng-container matColumnDef="c3">
-            <th mat-header-cell *matHeaderCellDef> tasa</th>
+            <th mat-header-cell *matHeaderCellDef> Tasa (%)</th>
             <td mat-cell *matCellDef="let element"> {{element.tasa}} </td>
         </ng-container>
 
