--- a/FrontMoneyMentor/src/app/components/impuestooperacion/impuestooperacion-list/impuestooperacion.html
+++ b/FrontMoneyMentor/src/app/components/impuestooperacion/impuestooperacion-list/impuestooperacion.html
@@ -1,8 +1,10 @@
 <div class="container">
-    <div style="text-align: center;margin:5%">
+    <mat-card class="card-container">
+    <mat-card-title style="text-align: center;margin:5%">
         <h2>Lista de Impuestos y operaciones</h2>
-    </div>
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+    </mat-card-title>
+
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 full-width">
         <ng-container matColumnDef="c1">
             <th mat-header-cell *matHeaderCellDef> idImpuestoOperacion</th>
             <td mat-cell *matCellDef="let element"> {{element.idImpuestoOperacion}} </td>
@@ -19,4 +21,5 @@
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
+    </mat-card>
 </div>
