--- a/FrontMoneyMentor/src/app/components/recurso/recursofecha/recursofecha.css
+++ b/FrontMoneyMentor/src/app/components/recurso/recursofecha/recursofecha.css
@@ -1,25 +1,36 @@
+.container {
+    width: 90%;
+    margin: 40px auto;
+}
+
+.card-container {
+    padding: 25px;
+    max-width: 800px;
+    margin: 0 auto;
+    border-radius: 14px;
+}
+
 .form-container {
     display: flex;
     gap: 12px;
-    margin-bottom: 20px;
+    justify-content: flex-start; 
     align-items: center;
+    margin-bottom: 15px;
+}
+
+.small-field {
+    width: 220px; 
 }
 
 .btn-buscar {
-    background-color: #ff7f32;
+    background-color: #ff8343;
     color: white;
-    padding: 10px 18px;
+    padding: 6px 14px;
+    font-size: 14px;
     border-radius: 6px;
-    border: none;
-    cursor: pointer;
-    transition: 0.3s;
-}
-
-.btn-buscar:hover {
-    background-color: #e86e29;
 }
 
 .mensaje {
     color: #d9534f;
-    margin-bottom: 15px;
+    margin-bottom: 12px;
 }
