--- a/FrontMoneyMentor/src/app/components/recurso/recursolistar/recursolistar.html
+++ b/FrontMoneyMentor/src/app/components/recurso/recursolistar/recursolistar.html
@@ -1,7 +1,10 @@
 <div class="container">
-  <div style="text-align: center; margin: 5%"><h2>lista de recursos</h2></div>
-  <div>
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+  <mat-card class="card-container">
+    <mat-card-title style="text-align: center;margin:5%"><h2>Lista de recursos</h2>
+    </mat-card-title>
+
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 full-width">
+      
       <ng-container matColumnDef="c1">
         <th mat-header-cell *matHeaderCellDef>ID</th>
         <td mat-cell *matCellDef="let element">{{ element.idRecurso }}</td>
@@ -9,72 +12,68 @@
       
       <br>
 
-      <!-- Name Column -->
       <ng-container matColumnDef="c2">
-        <th mat-header-cell *matHeaderCellDef>titulo</th>
+        <th mat-header-cell *matHeaderCellDef>Título</th>
         <td mat-cell *matCellDef="let element">{{ element.titulo }}</td>
       </ng-container>
 
-      <!-- Weight Column -->
       <ng-container matColumnDef="c3">
-        <th mat-header-cell *matHeaderCellDef>descripcion</th>
+        <th mat-header-cell *matHeaderCellDef>Descripcion</th>
         <td mat-cell *matCellDef="let element">{{ element.descripcion }}</td>
       </ng-container>
 
-      <!-- Symbol Column -->
       <ng-container matColumnDef="c4">
-        <th mat-header-cell *matHeaderCellDef>tipo</th>
+        <th mat-header-cell *matHeaderCellDef>Tipo</th>
         <td mat-cell *matCellDef="let element">{{ element.tipo }}</td>
       </ng-container>
-      <!-- Symbol Column -->
+
       <ng-container matColumnDef="c5">
-        <th mat-header-cell *matHeaderCellDef>autor</th>
+        <th mat-header-cell *matHeaderCellDef>Autor</th>
         <td mat-cell *matCellDef="let element">{{ element.autor }}</td>
       </ng-container>
 
       <ng-container matColumnDef="c6">
-        <th mat-header-cell *matHeaderCellDef>fuente</th>
+        <th mat-header-cell *matHeaderCellDef>Fuente</th>
         <td mat-cell *matCellDef="let element">{{ element.fuente }}</td>
       </ng-container>
 
-      <!-- Name Column -->
       <ng-container matColumnDef="c7">
-        <th mat-header-cell *matHeaderCellDef>url</th>
+        <th mat-header-cell *matHeaderCellDef>URL</th>
         <td mat-cell *matCellDef="let element">{{ element.url }}</td>
       </ng-container>
 
-      <!-- Weight Column -->
       <ng-container matColumnDef="c8">
-        <th mat-header-cell *matHeaderCellDef>fechapublicacion</th>
+        <th mat-header-cell *matHeaderCellDef>Fecha publicacion</th>
         <td mat-cell *matCellDef="let element">{{ element.fechapublicacion }}</td>
       </ng-container>
 
-      <!-- Symbol Column -->
       <ng-container matColumnDef="c9">
-        <th mat-header-cell *matHeaderCellDef>fechasubida</th>
+        <th mat-header-cell *matHeaderCellDef>Fecha subida</th>
         <td mat-cell *matCellDef="let element">{{ element.fechasubida }}</td>
       </ng-container>
 
-      <!-- Symbol Column -->
       <ng-container matColumnDef="c10">
-        <th mat-header-cell *matHeaderCellDef>Actualizar</th>
-        <td mat-cell *matCellDef="let element">
-          <button matButton [routerLink]="['edits', element.idRecurso]">
-            <mat-icon>edit</mat-icon>
-          </button>
-        </td>
-      </ng-container>
+          <th mat-header-cell *matHeaderCellDef> Actualizar </th>
+          <td mat-cell *matCellDef="let element">
+            <button mat-icon-button color="primary"
+              [routerLink]="['/app/edits', element.idUsuario]">
+              <mat-icon>edit</mat-icon>
+            </button>
+          </td>
+        </ng-container>
 
       <ng-container matColumnDef="c11">
-        <th mat-header-cell *matHeaderCellDef>Eliminar</th>
-        <td mat-cell *matCellDef="let element">
-          <button matButton (click)="eliminar(element.idRecurso)">
-            <mat-icon>delete</mat-icon>
-          </button>
-        </td>
-      </ng-container>
+          <th mat-header-cell *matHeaderCellDef> Eliminar </th>
+          <td mat-cell *matCellDef="let element">
+            <button mat-icon-button color="warn"
+              (click)="eliminar(element.idUsuario)">
+              <mat-icon>delete</mat-icon>
+            </button>
+          </td>
+        </ng-container>
+
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
-  </div>
+  </mat-card>
 </div>
