--- a/FrontMoneyMentor/src/app/components/recursousuario/recursousuario-listar/recursousuario-listar.html
+++ b/FrontMoneyMentor/src/app/components/recursousuario/recursousuario-listar/recursousuario-listar.html
@@ -1,22 +1,28 @@
 <div class="container">
-    <div style="text-align: center;margin:5%">
-        <h2>Lista de recursos y usuarios</h2>
-    </div>
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-        <ng-container matColumnDef="c1">
-            <th mat-header-cell *matHeaderCellDef> idRecursoUsuario</th>
-            <td mat-cell *matCellDef="let element"> {{element.idRecursoUsuario}} </td>
-        </ng-container>
-        <ng-container matColumnDef="c2">
-            <th mat-header-cell *matHeaderCellDef> usuario</th>
-            <td mat-cell *matCellDef="let element"> {{element.usuario.idUsuario}} </td>
-        </ng-container>
-        <ng-container matColumnDef="c3">
-            <th mat-header-cell *matHeaderCellDef> recurso</th>
-            <td mat-cell *matCellDef="let element"> {{element.recurso.idRecurso}} </td>
-        </ng-container>
+    <mat-card class="card-container">
+        <mat-card-title style=" text-align: center;margin:5%">
+            <h2>Lista de recursos y usuarios</h2>
+        </mat-card-title>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
+        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 full-width">
+
+            <ng-container matColumnDef="c1">
+                <th mat-header-cell *matHeaderCellDef> idRecursoUsuario</th>
+                <td mat-cell *matCellDef="let element"> {{element.idRecursoUsuario}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="c2">
+                <th mat-header-cell *matHeaderCellDef> usuario</th>
+                <td mat-cell *matCellDef="let element"> {{element.usuario.idUsuario}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="c3">
+                <th mat-header-cell *matHeaderCellDef> recurso</th>
+                <td mat-cell *matCellDef="let element"> {{element.recurso.idRecurso}} </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+    </mat-card>
 </div>
