--- a/FrontMoneyMentor/src/app/components/recursousuario/recursousuario-registrar/recursousuario-registrar.html
+++ b/FrontMoneyMentor/src/app/components/recursousuario/recursousuario-registrar/recursousuario-registrar.html
@@ -1,44 +1,45 @@
 <div class="container">
-    <div style="text-align: center; margin: 5%;">
-        <h2>{{ edicion ? 'Editar recurso usuario' : 'Registrar recurso usuario' }}</h2>
-    </div>
+    <mat-card class="rusuario-card">
+    <mat-card-title style="text-align: center; margin: 5%"><h2>{{ edicion ? 'Editar recurso usuario' : 'Registrar recurso usuario' }}</h2></mat-card-title>
+        <mat-card-content>
 
-    <div style="text-align: center; margin: 5%;">
-        <form [formGroup]="form" (submit)="aceptar()">
-            @if(edicion){
-            <mat-form-field>
-                <mat-label>ID</mat-label>
-                <input matInput formControlName="idRecursoUsuario" />
-                <mat-error>
-                    @if (form.get('idRecursoUsuario')?.hasError('required')) { Ingrese id}
-                </mat-error>
-            </mat-form-field>
+            <div style="text-align: center; margin: 5%;">
+                <form [formGroup]="form" (submit)="aceptar()">
+                    @if(edicion){
+                    <mat-form-field appearance="outline" class="custom-field">
+                        <mat-label>ID</mat-label>
+                        <input matInput formControlName="idRecursoUsuario" />
+                        <mat-error>
+                            @if (form.get('idRecursoUsuario')?.hasError('required')) { Ingrese id}
+                        </mat-error>
+                    </mat-form-field>
 
-            }
-            <div>
-                <mat-form-field>
-                    <mat-label>usuario</mat-label>
-                    <mat-select formControlName="usuario">
-                        @for (a of listausuario; track a) {
-                        <mat-option [value]="a.idUsuario">{{ a.idUsuario }}</mat-option>
-                        }
-                    </mat-select>
-                </mat-form-field>
-            </div>
-            <br />
-
-            <mat-form-field>
-                <mat-label>recurso</mat-label>
-                <mat-select formControlName="recurso">
-                    @for (a of listarecurso; track a) {
-                    <mat-option [value]="a.idRecurso">{{ a.idRecurso }}</mat-option>
                     }
-                </mat-select>
-            </mat-form-field>
-            <div>
-                <button matButton="elevated">{{ edicion ? 'Actualizar' : 'Registrar' }}</button>
-            </div>
+                    <div>
+                        <mat-form-field appearance="outline" class="custom-field">
+                            <mat-label>usuario</mat-label>
+                            <mat-select formControlName="usuario">
+                                @for (a of listausuario; track a) {
+                                <mat-option [value]="a.idUsuario">{{ a.idUsuario }}</mat-option>
+                                }
+                            </mat-select>
+                        </mat-form-field>
+                    </div>
+                    <br />
 
-        </form>
-    </div>
+                    <mat-form-field appearance="outline" class="custom-field">
+                        <mat-label>recurso</mat-label>
+                        <mat-select formControlName="recurso">
+                            @for (a of listarecurso; track a) {
+                            <mat-option [value]="a.idRecurso">{{ a.idRecurso }}</mat-option>
+                            }
+                        </mat-select>
+                    </mat-form-field>
+                    <div>
+                        <button mat-raised-button color="primary" class="custom-button" (click)="aceptar()">{{ edicion ? 'Actualizar' : 'Registrar' }}</button>
+                    </div>
+                </form>
+            </div>
+        </mat-card-content>
+    </mat-card>
 </div>
