--- a/FrontMoneyMentor/src/app/components/usuario/usuarioregistrar/usuarioregistrar.css
+++ b/FrontMoneyMentor/src/app/components/usuario/usuarioregistrar/usuarioregistrar.css
@@ -1,34 +1,32 @@
 mat-form-field {
-    width: 50%;
+  width: 50%;
 }
 
 button[mat-raised-button] {
-background-color:#FF8343;
-color: white;
-border: none;
-padding: 0.5rem 5rem;
-font-size: 1.1rem;
-border-radius: 0.375rem;  
-cursor: pointer;
-transition: background-color 0.3s ease;
-width: 20%;  
+  background-color: #FF8343;
+  color: white;
+  border: none;
+  padding: 0.5rem 5rem;
+  font-size: 1.1rem;
+  border-radius: 0.375rem;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  width: 20%;
 }
 
-.login-card{
+.login-card {
   max-width: 400px;
-   margin: 120px auto; 
-   padding: 20px; 
-   text-align: center;
+  margin: 120px auto;
+  padding: 20px;
+  text-align: center;
   border-radius: 16px;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.15);
-  
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
 }
 
-
-.button-group{
+.button-group {
   display: flex;
-  justify-content: center; 
-  gap: 15px; /* Espacio entre botones */
+  justify-content: center;
+  gap: 15px;
   margin-top: 20px;
 }
 
@@ -40,22 +38,18 @@ width: 20%;
   justify-content: center;
   align-items: center;
 
-  padding-top: 90px; /* 👈 DESPEGA EL CONTENIDO DEL HEADER */
+  padding-top: 90px;
 
 }
 
 .navbar ul li a {
-    text-decoration: none !important;
+  text-decoration: none !important;
 }
 
-.custom-field{
+.custom-field {
   width: 100%;
 }
 
-
-/* ========================= */
-/* HEADER */
-/* ========================= */
 header {
   width: 100%;
   height: 70px;
@@ -69,14 +63,17 @@ header {
   align-items: center;
   justify-content: space-between;
 }
+
 header .logo img {
   width: 55px;
 }
+
 header .navbar ul {
   list-style: none;
   display: flex;
   gap: 2rem;
 }
+
 header .navbar ul li a {
   color: #fff;
   font-size: 1.4rem;
@@ -84,9 +81,11 @@ header .navbar ul li a {
   padding: 20 2rem;
   margin-right: 20px;
 }
+
 header .navbar ul li a:hover {
   color: #FF8343;
 }
+
 header .fa-bars {
   font-size: 3rem;
   color: #FF8343;
