--- a/FrontMoneyMentor/src/app/components/operacion/operacion-listar/operacion-list.html
+++ b/FrontMoneyMentor/src/app/components/operacion/operacion-listar/operacion-list.html
@@ -39,9 +39,9 @@
 
     <!-- Usuario ID -->
     <ng-container matColumnDef="c7">
-      <th mat-header-cell *matHeaderCellDef>Usuario ID</th>
+      <th mat-header-cell *matHeaderCellDef>nombre usuario</th>
       <td mat-cell *matCellDef="let element">
-        {{ element.usuario?.idUsuario }}
+        {{ element.usuario?.nombre }}
       </td>
 
       <ng-container matColumnDef="c8">
