--- a/FrontMoneyMentor/src/app/components/recurso/recursolistar/recursolistar.html
+++ b/FrontMoneyMentor/src/app/components/recurso/recursolistar/recursolistar.html
@@ -56,7 +56,7 @@
           <th mat-header-cell *matHeaderCellDef> Actualizar </th>
           <td mat-cell *matCellDef="let element">
             <button mat-icon-button color="primary"
-              [routerLink]="['/app/edits', element.idUsuario]">
+              [routerLink]="['/app/recurso/edits', element.idRecurso]">
               <mat-icon>edit</mat-icon>
             </button>
           </td>
@@ -66,7 +66,7 @@
           <th mat-header-cell *matHeaderCellDef> Eliminar </th>
           <td mat-cell *matCellDef="let element">
             <button mat-icon-button color="warn"
-              (click)="eliminar(element.idUsuario)">
+              (click)="eliminar(element.idRecurso)">
               <mat-icon>delete</mat-icon>
             </button>
           </td>
