--- a/FrontMoneyMentor/src/app/components/roles/rol-listar/rol-listar.html
+++ b/FrontMoneyMentor/src/app/components/roles/rol-listar/rol-listar.html
@@ -18,14 +18,14 @@
 
       <ng-container matColumnDef="c3">
         <th mat-header-cell *matHeaderCellDef>Nombre usuario</th>
-        <td mat-cell *matCellDef="let element">{{ element.usuario?.nombre }}</td>
+        <td mat-cell *matCellDef="let element">{{ element.idUsuario }}</td>
       </ng-container>
 
       <ng-container matColumnDef="c4">
           <th mat-header-cell *matHeaderCellDef> Actualizar </th>
           <td mat-cell *matCellDef="let element">
             <button mat-icon-button color="primary"
-              [routerLink]="['/app/edits', element.idUsuario]">
+              [routerLink]="['/app/roles/edits', element.idrol]">
               <mat-icon>edit</mat-icon>
             </button>
           </td>
@@ -35,7 +35,7 @@
           <th mat-header-cell *matHeaderCellDef> Eliminar </th>
           <td mat-cell *matCellDef="let element">
             <button mat-icon-button color="warn"
-              (click)="eliminar(element.idUsuario)">
+              (click)="eliminar(element.id)">
               <mat-icon>delete</mat-icon>
             </button>
           </td>
