--- a/FrontMoneyMentor/src/app/components/impuesto/impuesto-list/impuesto-list.css
+++ b/FrontMoneyMentor/src/app/components/impuesto/impuesto-list/impuesto-list.css
@@ -1,29 +1,29 @@
-/* --- Botones dentro de la tabla --- */
-
-button[matButton] {
-
-font-size: 0.8rem;
-
-font-weight: 500;
-
-border-radius: 6px;
-
-border-color: rgb(177, 151, 141);
-
-padding: 4px 12px;
-
-color: rgb(238, 244, 241);
-
-text-transform: none;
-
-transition: all 0.25s ease;
-
-box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
-
-background-color: rgb(235, 10, 10);
-
+button[mat-icon-button] {
+    background-color: #ff8343;
+    color: white;
+    border-radius: 6px;
+    transition: 0.25s ease;
 }
 
+button[mat-icon-button]:hover {
+    background-color: #ff8343;
+}
+
+.container {
+    width: 90%;
+    margin: 40px auto;
+    padding: 20px;
+    background: #ffffff;
+    border-radius: 12px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+}
+
+.container h2 {
+    font-size: 35px;
+    font-weight: 600;
+    color: #000000;
+    margin-bottom: 20px;
+}
 
 
 
