--- a/FrontMoneyMentor/src/app/components/impuesto/impuesto-list/impuesto-list.html
+++ b/FrontMoneyMentor/src/app/components/impuesto/impuesto-list/impuesto-list.html
@@ -1,8 +1,9 @@
-<mat-card>
+
 <div class="container">
-    <div style="text-align: center;margin:5%">
+    <mat-card class="card-container">
+    <mat-card-title style="text-align: center;margin:5%">
         <h2>Lista de Impuestos</h2>
-    </div>
+    </mat-card-title>
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
         <ng-container matColumnDef="c1">
             <th mat-header-cell *matHeaderCellDef> ID</th>
@@ -19,8 +20,26 @@
             <td mat-cell *matCellDef="let element"> {{element.tasa}} </td>
         </ng-container>
 
+        <ng-container matColumnDef="c4">
+                <th mat-header-cell *matHeaderCellDef>Actualizar</th>
+                <td mat-cell *matCellDef="let element">
+                    <button mat-icon-button color="primary" [routerLink]="['/app/impuesto/edits', element.idImpuesto]">
+                        <mat-icon>edit</mat-icon>
+                    </button>
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="c5">
+                <th mat-header-cell *matHeaderCellDef>Eliminar</th>
+                <td mat-cell *matCellDef="let element">
+                    <button mat-icon-button color="warn" (click)="eliminar(element.idImpuesto)">
+                        <mat-icon>delete</mat-icon>
+                    </button>
+                </td>
+            </ng-container>
+
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
+    </mat-card>
 </div>
-</mat-card>
