--- a/FrontMoneyMentor/src/app/components/impuestooperacion/impuestooperacion-insert/impuestooperacion-insert.css
+++ b/FrontMoneyMentor/src/app/components/impuestooperacion/impuestooperacion-insert/impuestooperacion-insert.css
@@ -1,17 +1,25 @@
+
 mat-form-field {
-    width: 50%;
+    width: 100%; 
+    margin-bottom: 15px;
 }
 
 button[mat-raised-button] {
     background-color: #FF8343;
     color: white;
     border: none;
-    padding: 0.5rem 5rem;
+    padding: 0.6rem 0;
     font-size: 1.1rem;
     border-radius: 0.375rem;
     cursor: pointer;
     transition: background-color 0.3s ease;
-    width: 20%;
+    width: 150%;               
+    display: block;
+    margin: 0 auto;           
+}
+
+button[mat-raised-button]:hover {
+    background-color: #e97436;
 }
 
 .insert-card {
@@ -21,5 +29,11 @@ button[mat-raised-button] {
     text-align: center;
     border-radius: 16px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+}
 
+.form-column {
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+    width: 100%;
 }
