--- a/FrontMoneyMentor/src/app/components/recurso/recursolistar/recursolistar.html
+++ b/FrontMoneyMentor/src/app/components/recurso/recursolistar/recursolistar.html
@@ -1,16 +1,15 @@
 <div class="container">
   <mat-card class="card-container">
-    <mat-card-title style="text-align: center;margin:5%"><h2>Lista de recursos</h2>
+    <mat-card-title style="text-align: center;margin:5%">
+      <h2>Lista de recursos</h2>
     </mat-card-title>
 
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 full-width">
-      
+
       <ng-container matColumnDef="c1">
         <th mat-header-cell *matHeaderCellDef>ID</th>
         <td mat-cell *matCellDef="let element">{{ element.idRecurso }}</td>
       </ng-container>
-      
-      <br>
 
       <ng-container matColumnDef="c2">
         <th mat-header-cell *matHeaderCellDef>Título</th>
@@ -53,27 +52,34 @@
       </ng-container>
 
       <ng-container matColumnDef="c10">
-          <th mat-header-cell *matHeaderCellDef> Actualizar </th>
-          <td mat-cell *matCellDef="let element">
-            <button mat-icon-button color="primary"
-              [routerLink]="['/app/recurso/edits', element.idRecurso]">
-              <mat-icon>edit</mat-icon>
-            </button>
-          </td>
-        </ng-container>
+        <th mat-header-cell *matHeaderCellDef>Actualizar</th>
+        <td mat-cell *matCellDef="let element">
+          <button mat-icon-button color="primary"
+            [routerLink]="['/app/recurso/edits', element.idRecurso]">
+            <mat-icon>edit</mat-icon>
+          </button>
+        </td>
+      </ng-container>
 
       <ng-container matColumnDef="c11">
-          <th mat-header-cell *matHeaderCellDef> Eliminar </th>
-          <td mat-cell *matCellDef="let element">
-            <button mat-icon-button color="warn"
-              (click)="eliminar(element.idRecurso)">
-              <mat-icon>delete</mat-icon>
-            </button>
-          </td>
-        </ng-container>
+        <th mat-header-cell *matHeaderCellDef>Eliminar</th>
+        <td mat-cell *matCellDef="let element">
+          <button mat-icon-button color="warn" (click)="eliminar(element.idRecurso)">
+            <mat-icon>delete</mat-icon>
+          </button>
+        </td>
+      </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
+
+    <mat-paginator
+      [length]="dataSource?.data?.length || 0"
+      [pageSize]="5"
+      [pageSizeOptions]="[5, 10, 20]"
+      showFirstLastButtons>
+    </mat-paginator>
+
   </mat-card>
 </div>
