--- a/FrontMoneyMentor/src/app/components/roles/rol-listar/rol-listar.html
+++ b/FrontMoneyMentor/src/app/components/roles/rol-listar/rol-listar.html
@@ -22,27 +22,35 @@
       </ng-container>
 
       <ng-container matColumnDef="c4">
-          <th mat-header-cell *matHeaderCellDef> Actualizar </th>
-          <td mat-cell *matCellDef="let element">
-            <button mat-icon-button color="primary"
-              [routerLink]="['/app/roles/edits', element.idrol]">
-              <mat-icon>edit</mat-icon>
-            </button>
-          </td>
-        </ng-container>
+        <th mat-header-cell *matHeaderCellDef>Actualizar</th>
+        <td mat-cell *matCellDef="let element">
+          <button mat-icon-button color="primary"
+                  [routerLink]="['/app/roles/edits', element.idrol]">
+            <mat-icon>edit</mat-icon>
+          </button>
+        </td>
+      </ng-container>
 
-        <ng-container matColumnDef="c5">
-          <th mat-header-cell *matHeaderCellDef> Eliminar </th>
-          <td mat-cell *matCellDef="let element">
-            <button mat-icon-button color="warn"
-              (click)="eliminar(element.id)">
-              <mat-icon>delete</mat-icon>
-            </button>
-          </td>
-        </ng-container>
+      <ng-container matColumnDef="c5">
+        <th mat-header-cell *matHeaderCellDef>Eliminar</th>
+        <td mat-cell *matCellDef="let element">
+          <button mat-icon-button color="warn"
+                  (click)="eliminar(element.id)">
+            <mat-icon>delete</mat-icon>
+          </button>
+        </td>
+      </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-      </table>
+    </table>
+
+    <mat-paginator
+      [length]="dataSource?.data?.length || 0"
+      [pageSize]="5"
+      [pageSizeOptions]="[5, 10, 20]"
+      showFirstLastButtons>
+    </mat-paginator>
+
   </mat-card>
 </div>
