--- a/FrontMoneyMentor/src/app/components/ahorro/ahorro-insert/ahorro-insert.html
+++ b/FrontMoneyMentor/src/app/components/ahorro/ahorro-insert/ahorro-insert.html
@@ -23,13 +23,21 @@
         </mat-form-field>
       </div>
       <br />
+
+      <mat-form-field appearance="fill" class="full-width">
+        <mat-label>Monto</mat-label>
+        <input matInput type="number" formControlName="monto_actual" />
+        <mat-error *ngIf="form.get('monto_actual')?.hasError('required')">
+          El monto es obligatorio
+        </mat-error>
+        <mat-error *ngIf="form.get('monto_actual')?.hasError('min')">
+          El monto no puede ser negativo
+        </mat-error>
+      </mat-form-field>
+      <br />
       <mat-form-field>
         <mat-label>Fecha Inicio</mat-label>
-        <input matInput 
-        [matDatepicker]="pickerInicio" 
-        formControlName="fecha_inicio" 
-        [min]="hoy"
-        />
+        <input matInput [matDatepicker]="pickerInicio" formControlName="fecha_inicio" [min]="hoy" />
         <mat-datepicker-toggle matIconSuffix [for]="pickerInicio"></mat-datepicker-toggle>
         <mat-datepicker #pickerInicio></mat-datepicker>
 
@@ -42,10 +50,7 @@
 
       <mat-form-field>
         <mat-label>Fecha Límite</mat-label>
-        <input matInput [matDatepicker]="pickerLimite" 
-        formControlName="fecha_limite"
-        [min]="hoy" 
-        />
+        <input matInput [matDatepicker]="pickerLimite" formControlName="fecha_limite" [min]="hoy" />
         <mat-datepicker-toggle matIconSuffix [for]="pickerLimite"></mat-datepicker-toggle>
         <mat-datepicker #pickerLimite></mat-datepicker>
 
@@ -55,12 +60,9 @@
 
         @if (form.errors?.['fechaInvalida']) {
         <mat-error> La fecha límite no puede ser menor que la fecha de inicio. </mat-error>
-        }
-
-        @if (form.errors?.['fechaLimiteMenorHoy']) {
+        } @if (form.errors?.['fechaLimiteMenorHoy']) {
         <mat-error> La fecha límite no puede ser menor a hoy. </mat-error>
         }
-
       </mat-form-field>
 
       <br />
