--- a/FrontMoneyMentor/src/app/components/ahorro/ahorro-list/ahorro-list.html
+++ b/FrontMoneyMentor/src/app/components/ahorro/ahorro-list/ahorro-list.html
@@ -13,6 +13,10 @@
             <th mat-header-cell *matHeaderCellDef>Objetivo</th>
             <td mat-cell *matCellDef="let element"> {{element.objetivo}} </td>
         </ng-container>
+        <ng-container matColumnDef="c7">
+            <th mat-header-cell *matHeaderCellDef>Monto Actual</th>
+            <td mat-cell *matCellDef="let element"> {{element.monto_actual}} </td>
+        </ng-container>
 
         <ng-container matColumnDef="c3">
             <th mat-header-cell *matHeaderCellDef>Fecha Inicio</th>
