--- a/FrontMoneyMentor/src/app/components/menu/menu.html
+++ b/FrontMoneyMentor/src/app/components/menu/menu.html
@@ -120,6 +120,7 @@
     <button mat-menu-item routerLink="/app/listarmes">Reporte 2</button>
     <button mat-menu-item routerLink="/app/sumaxusuario">Reporte 3</button>
     <button mat-menu-item routerLink="/app/impuestomonto">Reporte 4</button>
+    <button mat-menu-item routerLink="/app/sumaahorros">Reporte 5</button>
 
   </mat-menu>
   <mat-menu #menuroles="matMenu">
