Reporte ahorro por periodo

--- a/FrontMoneyMentor/src/app/components/menu/menu.html
+++ b/FrontMoneyMentor/src/app/components/menu/menu.html
@@ -121,6 +121,7 @@
     <button mat-menu-item routerLink="/app/sumaxusuario">Reporte 3</button>
     <button mat-menu-item routerLink="/app/impuestomonto">Reporte 4</button>
     <button mat-menu-item routerLink="/app/sumaahorros">Reporte 5</button>
+    <button mat-menu-item routerLink="/app/ahorro-periodo">Reporte 6</button>
 
   </mat-menu>
   <mat-menu #menuroles="matMenu">
