se modifico el css de todas las tablas para el cliente

--- a/FrontMoneyMentor/src/app/components/menu/menu.html
+++ b/FrontMoneyMentor/src/app/components/menu/menu.html
@@ -82,8 +82,8 @@
   <mat-menu #menuOperacion="matMenu">
     <button mat-menu-item routerLink="/app/operacion">Listar Operaciones</button>
     <button mat-menu-item routerLink="/app/operacion/nuevo">Registrar Operación</button>
-    <button mat-menu-item routerLink="/app/operacion/filtro1">filtro 1</button>
-    <button mat-menu-item routerLink="/app/operacion/filtro2">filtro 2</button>
+    <button mat-menu-item routerLink="/app/operacion/filtro1">Operacion por categoria</button>
+    <button mat-menu-item routerLink="/app/operacion/filtro2">Operacion por fecha</button>
   </mat-menu>
 
   <mat-menu #menuBalance="matMenu">
@@ -115,12 +115,12 @@
     <button mat-menu-item routerLink="/app/recurso-usuario/nuevo">Registrar Recurso-Usuario</button>
   </mat-menu>
   <mat-menu #menuReportesBalance="matMenu">
-    <button mat-menu-item routerLink="/app/sumaingresos">Reporte 1</button>
-    <button mat-menu-item routerLink="/app/listarmes">Reporte 2</button>
-    <button mat-menu-item routerLink="/app/sumaxusuario">Reporte 3</button>
-    <button mat-menu-item routerLink="/app/impuestomonto">Reporte 4</button>
-    <button mat-menu-item routerLink="/app/sumaahorros">Reporte 5</button>
-    <button mat-menu-item routerLink="/app/ahorro-periodo">Reporte 6</button>
+    <button mat-menu-item routerLink="/app/sumaingresos">Suma de ingresos de usuarios</button>
+    <button mat-menu-item routerLink="/app/listarmes">Balance por mes</button>
+    <button mat-menu-item routerLink="/app/sumaxusuario">Ingresos vs Gastos por Usuario</button>
+    <button mat-menu-item routerLink="/app/impuestomonto">Impuestos por ingresos</button>
+    <button mat-menu-item routerLink="/app/sumaahorros">Ahorro por usuario</button>
+    <button mat-menu-item routerLink="/app/ahorro-periodo">Ahorros por período</button>
 
   </mat-menu>
   <mat-menu #menuroles="matMenu">
