--- a/FrontMoneyMentor/src/app/components/reporte-operacion/reporte-operacion.html
+++ b/FrontMoneyMentor/src/app/components/reporte-operacion/reporte-operacion.html
@@ -1,8 +1,8 @@
-<mat-card>
+
 <div class="title-container">
-  <div style="text-align: center" class="title">
+  <mat-card-title style="text-align: center" class="title">
     <h2>Ingresos vs Gastos por Usuario</h2>
-  </div>
+  </mat-card-title>
 
   @if(hasData){
     <div style="text-align: center" class="chart-container">
@@ -24,5 +24,4 @@
     </div>
   }
 </div>
-</mat-card>
 
