--- a/FrontMoneyMentor/src/app/components/ahorro/ahorro-insert/ahorro-insert.html
+++ b/FrontMoneyMentor/src/app/components/ahorro/ahorro-insert/ahorro-insert.html
@@ -1,96 +1,57 @@
-<div class="container">
-  <mat-card class="insert-card">
-    <mat-card-content>
-      <div style="text-align: center; margin: 5%">
-        <h2>{{ edicion ? 'Editar Ahorro' : 'Registrar Ahorro' }}</h2>
-      </div>
+<div class="card-wrapper">
+  <mat-card class="card-form">
+    <mat-card-title>
+      <h2>{{ edicion ? 'Editar Ahorro' : 'Registrar Ahorro' }}</h2>
 
-      <div style="text-align: center; margin: 5%">
-        <form [formGroup]="form" (submit)="aceptar()">
-          @if(edicion){
-          <mat-form-field>
-            <mat-label>ID</mat-label>
-            <input matInput formControlName="codigo" />
-            <mat-error> @if (form.get('codigo')?.hasError('required')) { Ingrese id} </mat-error>
-          </mat-form-field>
+      <form [formGroup]="form" (submit)="aceptar()">
+        
+        @if(edicion){
+        <mat-form-field appearance="outline">
+          <mat-label>ID</mat-label>
+          <input matInput formControlName="codigo" />
+          <mat-error *ngIf="form.get('codigo')?.hasError('required')">Ingrese ID</mat-error>
+        </mat-form-field>
+        }
 
-          }
-          <div>
-            <mat-form-field appearance="fill">
-              <mat-label>Objetivo</mat-label>
-              <input matInput formControlName="objetivo" />
-              <mat-error *ngIf="form.get('objetivo')?.hasError('required')">
-                Este campo es obligatorio
-              </mat-error>
-            </mat-form-field>
-          </div>
-          <br />
+        <mat-form-field appearance="outline">
+          <mat-label>Objetivo</mat-label>
+          <input matInput formControlName="objetivo" />
+        </mat-form-field>
 
-          <mat-form-field appearance="fill" class="full-width">
-            <mat-label>Monto</mat-label>
-            <input matInput type="number" formControlName="monto_actual" />
-            <mat-error *ngIf="form.get('monto_actual')?.hasError('required')">
-              El monto es obligatorio
-            </mat-error>
-            <mat-error *ngIf="form.get('monto_actual')?.hasError('min')">
-              El monto no puede ser negativo
-            </mat-error>
-          </mat-form-field>
-          <br />
-          <mat-form-field>
-            <mat-label>Fecha Inicio</mat-label>
-            <input
-              matInput
-              [matDatepicker]="pickerInicio"
-              formControlName="fecha_inicio"
-              [min]="hoy"
-            />
-            <mat-datepicker-toggle matIconSuffix [for]="pickerInicio"></mat-datepicker-toggle>
-            <mat-datepicker #pickerInicio></mat-datepicker>
+        <mat-form-field appearance="outline">
+          <mat-label>Monto</mat-label>
+          <input matInput type="number" formControlName="monto_actual" />
+        </mat-form-field>
 
-            <mat-error *ngIf="form.get('fecha_inicio')?.hasError('required')">
-              Ingrese fecha de inicio!
-            </mat-error>
-          </mat-form-field>
+        <mat-form-field appearance="outline">
+          <mat-label>Fecha Inicio</mat-label>
+          <input matInput [matDatepicker]="pickerInicio" formControlName="fecha_inicio" [min]="hoy" />
+          <mat-datepicker-toggle matIconSuffix [for]="pickerInicio"></mat-datepicker-toggle>
+          <mat-datepicker #pickerInicio></mat-datepicker>
+        </mat-form-field>
 
-          <br />
+        <mat-form-field appearance="outline">
+          <mat-label>Fecha Límite</mat-label>
+          <input matInput [matDatepicker]="pickerLimite" formControlName="fecha_limite" [min]="hoy" />
+          <mat-datepicker-toggle matIconSuffix [for]="pickerLimite"></mat-datepicker-toggle>
+          <mat-datepicker #pickerLimite></mat-datepicker>
+        </mat-form-field>
 
-          <mat-form-field>
-            <mat-label>Fecha Límite</mat-label>
-            <input
-              matInput
-              [matDatepicker]="pickerLimite"
-              formControlName="fecha_limite"
-              [min]="hoy"
-            />
-            <mat-datepicker-toggle matIconSuffix [for]="pickerLimite"></mat-datepicker-toggle>
-            <mat-datepicker #pickerLimite></mat-datepicker>
-
-            <mat-error *ngIf="form.get('fecha_limite')?.hasError('required')">
-              Ingrese fecha de finalización!!
-            </mat-error>
-
-            @if (form.errors?.['fechaInvalida']) {
-            <mat-error> La fecha límite no puede ser menor que la fecha de inicio. </mat-error>
-            } @if (form.errors?.['fechaLimiteMenorHoy']) {
-            <mat-error> La fecha límite no puede ser menor a hoy. </mat-error>
+        <mat-form-field appearance="outline">
+          <mat-label>Usuario</mat-label>
+          <mat-select formControlName="fk">
+            @for (a of listaUsuario; track a) {
+            <mat-option [value]="a.idUsuario">{{ a.nombre }}</mat-option>
             }
-          </mat-form-field>
+          </mat-select>
+        </mat-form-field>
 
-          <br />
-          <mat-form-field>
-            <mat-label>Usuario</mat-label>
-            <mat-select formControlName="fk">
-              @for (a of listaUsuario; track a) {
-              <mat-option [value]="a.idUsuario">{{ a.nombre }}</mat-option>
-              }
-            </mat-select>
-          </mat-form-field>
-          <div>
-            <button matButton="elevated">{{ edicion ? 'Actualizar' : 'Registrar' }}</button>
-          </div>
-        </form>
-      </div>
-    </mat-card-content>
+        <button mat-raised-button class="btn-submit">
+          {{ edicion ? 'Actualizar' : 'Registrar' }}
+        </button>
+
+      </form>
+
+    </mat-card-title>
   </mat-card>
 </div>
