--- a/FrontMoneyMentor/src/app/components/balance/balance-insert/balance-insert.css
+++ b/FrontMoneyMentor/src/app/components/balance/balance-insert/balance-insert.css
@@ -3,7 +3,13 @@ mat-form-field {
     width: 90%; 
     margin-bottom: 15px;
 }
-
+.container h2 {
+    font-size: 35px;
+    font-weight: 600;
+    text-align: center;
+    color: #000000;
+    margin-bottom: 25px;
+}
 button[mat-raised-button] {
     background-color: #FF8343;
     color: white;
