--- a/FrontMoneyMentor/src/app/components/balance/balance-list/balance-list.css
+++ b/FrontMoneyMentor/src/app/components/balance/balance-list/balance-list.css
@@ -1,43 +1,34 @@
-/* --- Botones dentro de la tabla --- */
+.container {
+  width: 90%;
+  margin: 40px auto;
+  padding: 20px;
+  background: #ffffff;
+  border-radius: 12px;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+}
 
-button[matButton] {
+.container h2 {
+  font-size: 28px;
+  font-weight: 600;
+  color: #000000;
+  margin-bottom: 20px;
+}
 
-  font-size: 0.8rem;
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
 
-  font-weight: 500;
+/* --- Responsivo (botones más compactos en pantallas pequeñas) --- */
 
-  border-radius: 6px;
+@media (max-width: 768px) {
 
-  border-color: rgb(177, 151, 141);
+  button[matButton] [matIconButton] {
 
-  padding: 4px 12px;
+    font-size: 0.7rem;
 
-  color: rgb(238, 244, 241);
-
-  text-transform: none;
-
-  transition: all 0.25s ease;
-
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
-
-  background-color: rgb(235, 10, 10);
-
- }
-
-
-
-
-
- /* --- Responsivo (botones más compactos en pantallas pequeñas) --- */
-
- @media (max-width: 768px) {
-
-  button[matButton] [matIconButton]{
-
-   font-size: 0.7rem;
-
-   padding: 3px 8px;
+    padding: 3px 8px;
 
   }
 
- }
+}
