--- a/FrontMoneyMentor/src/app/components/operacion/ope-busqueda2/ope-busqueda2.html
+++ b/FrontMoneyMentor/src/app/components/operacion/ope-busqueda2/ope-busqueda2.html
@@ -1,42 +1,46 @@
-<div>
-  <h3>Reporte por Fecha</h3>
+<div class="container">
+  <mat-card class="card-container">
+    <mat-card-title class="title-center">
+      <h2>Reporte por Fecha</h2>
+    </mat-card-title>
 
-  <mat-form-field appearance="outline">
-    <mat-label>Fecha</mat-label>
-    <input matInput [matDatepicker]="picker" formControlName="fechabusqueda">
-    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-    <mat-datepicker #picker></mat-datepicker>
-  </mat-form-field>
+    <mat-form-field appearance="outline" class="custom-field">
+      <mat-label>Fecha</mat-label>
+      <input matInput [matDatepicker]="picker" formControlName="fechabusqueda">
+      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field>
 
-  <div *ngIf="mensaje" style="color: red;">{{ mensaje }}</div>
+    <div *ngIf="mensaje" style="color: red;">{{ mensaje }}</div>
 
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-    <ng-container matColumnDef="idOperacion">
-      <th mat-header-cell *matHeaderCellDef>ID</th>
-      <td mat-cell *matCellDef="let op">{{ op.idOperacion }}</td>
-    </ng-container>
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+      <ng-container matColumnDef="idOperacion">
+        <th mat-header-cell *matHeaderCellDef>ID</th>
+        <td mat-cell *matCellDef="let op">{{ op.idOperacion }}</td>
+      </ng-container>
 
-    <ng-container matColumnDef="nombre">
-      <th mat-header-cell *matHeaderCellDef>Nombre</th>
-      <td mat-cell *matCellDef="let op">{{ op.usuario.nombre }}</td>
-    </ng-container>
+      <ng-container matColumnDef="nombre">
+        <th mat-header-cell *matHeaderCellDef>Nombre</th>
+        <td mat-cell *matCellDef="let op">{{ op.usuario.nombre }}</td>
+      </ng-container>
 
-    <ng-container matColumnDef="categoria">
-      <th mat-header-cell *matHeaderCellDef>Categoría</th>
-      <td mat-cell *matCellDef="let op">{{ op.categoria }}</td>
-    </ng-container>
+      <ng-container matColumnDef="categoria">
+        <th mat-header-cell *matHeaderCellDef>Categoría</th>
+        <td mat-cell *matCellDef="let op">{{ op.categoria }}</td>
+      </ng-container>
 
-    <ng-container matColumnDef="montoOperacion">
-      <th mat-header-cell *matHeaderCellDef>Monto</th>
-      <td mat-cell *matCellDef="let op">{{ op.monto }}</td>
-    </ng-container>
+      <ng-container matColumnDef="montoOperacion">
+        <th mat-header-cell *matHeaderCellDef>Monto</th>
+        <td mat-cell *matCellDef="let op">{{ op.monto }}</td>
+      </ng-container>
 
-    <ng-container matColumnDef="fecha">
-      <th mat-header-cell *matHeaderCellDef>Fecha</th>
-      <td mat-cell *matCellDef="let op">{{ op.fecha | date:'yyyy-MM-dd' }}</td>
-    </ng-container>
+      <ng-container matColumnDef="fecha">
+        <th mat-header-cell *matHeaderCellDef>Fecha</th>
+        <td mat-cell *matCellDef="let op">{{ op.fecha | date:'yyyy-MM-dd' }}</td>
+      </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+  </mat-card>
 </div>
