--- a/FrontMoneyMentor/src/app/components/reportebalance-sum/reportebalance-sum.html
+++ b/FrontMoneyMentor/src/app/components/reportebalance-sum/reportebalance-sum.html
@@ -1,47 +1,20 @@
-<div class="title-container">
+<div class="report-card">
 
-    <div style="text-align: center" class="title"><h2>Reporte suma de ingresos de usuarios</h2>
-   
+    <h2>Reporte suma de ingresos de usuarios</h2>
+
+    @if(hasData == true) {
+    <div class="chart-container">
+        <canvas baseChart [datasets]="barChartData" [labels]="barChartLabels" [options]="barChartOptions"
+            [legend]="barChartLegend" [type]="barChartType">
+        </canvas>
     </div>
-   
-   
-   
-    @if(hasData==true){
-   
-     <div style="text-align: center" class="chart-container">
-   
-      <canvas
-   
-       baseChart
-   
-       [datasets]="barChartData"
-   
-       [labels]="barChartLabels"
-   
-       [options]="barChartOptions"
-   
-       [legend]="barChartLegend"
-   
-       [type]="barChartType"
-   
-      ></canvas>
-   
-     </div>
-   
     }
-   
-   
-   
-    @if(hasData==false){
-   
-     <div class="no-data">
-   
-      <mat-icon class="no-data-icon">info_outline</mat-icon>
-   
-      <p class="no-data-message">No hay datos disponibles para mostrar.</p>
-   
-     </div>
-   
+
+    @if(hasData == false) {
+    <div class="no-data">
+        <mat-icon class="no-data-icon">info_outline</mat-icon>
+        <p class="no-data-message">No hay datos disponibles para mostrar.</p>
+    </div>
     }
-   
-   </div>
+
+</div>
