--- a/FrontMoneyMentor/src/app/components/usuario/usuario-buscar/usuario-buscar.html
+++ b/FrontMoneyMentor/src/app/components/usuario/usuario-buscar/usuario-buscar.html
@@ -1,45 +1,51 @@
 <div class="container">
-    <mat-card class="buscar-card">
+  <mat-card class="card-container">
 
-    <mat-card-title>Búsqueda de Usuario</mat-card-title>
+    <mat-card-title class="title-center">
+      <h2>Búsqueda de Usuario</h2>
+    </mat-card-title>
 
-    <mat-card-content>
+    <!-- Formulario centrado -->
+    <div class="form-row">
 
-    <div class="form-section">
-        <mat-form-field appearance="outline">
+      <mat-form-field appearance="outline" class="custom-field">
         <mat-label>ID del usuario</mat-label>
         <input matInput type="number" [(ngModel)]="idBuscado">
-        </mat-form-field>
+      </mat-form-field>
 
-        <button mat-raised-button color="primary" (click)="buscarPorId()">Buscar</button>
-        <button mat-raised-button color="warn" (click)="limpiarBusqueda()">Limpiar</button>
+      <!-- Botones centrados -->
+      <div class="button-row">
+        <button mat-raised-button class="btn-buscar" (click)="buscarPorId()">Buscar</button>
+        <button mat-raised-button class="btn-limpiar" (click)="limpiarBusqueda()">Limpiar</button>
+      </div>
+
     </div>
 
-      <p class="mensaje" *ngIf="mensaje">{{ mensaje }}</p>
+    <!-- Mensaje de error -->
+    <p class="mensaje" *ngIf="mensaje">{{ mensaje }}</p>
 
-      <table mat-table [dataSource]="dataSource" class="mat-elevation-z3" *ngIf="dataSource.data.length > 0">
+    <!-- Tabla -->
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" *ngIf="dataSource.data.length > 0">
 
-        <ng-container matColumnDef="idUsuario">
-          <th mat-header-cell *matHeaderCellDef> ID </th>
-          <td mat-cell *matCellDef="let element"> {{element.idUsuario}} </td>
-        </ng-container>
+      <ng-container matColumnDef="idUsuario">
+        <th mat-header-cell *matHeaderCellDef> ID </th>
+        <td mat-cell *matCellDef="let element"> {{element.idUsuario}} </td>
+      </ng-container>
 
-        <ng-container matColumnDef="nombre">
-          <th mat-header-cell *matHeaderCellDef> Nombre </th>
-          <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
-        </ng-container>
+      <ng-container matColumnDef="nombre">
+        <th mat-header-cell *matHeaderCellDef> Nombre </th>
+        <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
+      </ng-container>
 
-        <ng-container matColumnDef="correo">
-          <th mat-header-cell *matHeaderCellDef> Correo </th>
-          <td mat-cell *matCellDef="let element"> {{element.correo}} </td>
-        </ng-container>
+      <ng-container matColumnDef="correo">
+        <th mat-header-cell *matHeaderCellDef> Correo </th>
+        <td mat-cell *matCellDef="let element"> {{element.correo}} </td>
+      </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 
     </table>
 
-    </mat-card-content>
-
-    </mat-card>
+  </mat-card>
 </div>
