Actualiza etiquetas y estilos en formularios: cambia 'Password' a 'Contrasenia', ajusta el ancho máximo de contenedor y modifica el tamaño del canvas.

--- a/FrontMoneyMentor/src/app/components/autenticador/autenticador.html
+++ b/FrontMoneyMentor/src/app/components/autenticador/autenticador.html
@@ -29,7 +29,7 @@
         <br />
 
         <mat-form-field class="example-full-width" appearance="outline">
-          <mat-label>Password</mat-label>
+          <mat-label>Contrasenia</mat-label>
           <input type="password" matInput placeholder="Password" [(ngModel)]="password" />
         </mat-form-field>
 
