Se añadio validacion para evitar duplicidad de correos

--- a/FrontMoneyMentor/src/app/components/autenticador/autenticador.html
+++ b/FrontMoneyMentor/src/app/components/autenticador/autenticador.html
@@ -22,8 +22,8 @@
         <h2 style="color: #4158a6">Iniciar sesión</h2>
 
         <mat-form-field class="example-full-width" appearance="outline">
-          <mat-label>Usuario</mat-label>
-          <input matInput placeholder="Username" [(ngModel)]="username" />
+          <mat-label>Correo</mat-label>
+          <input matInput placeholder="Username" [(ngModel)]="correo" />
         </mat-form-field>
 
         <br />
