--- a/FrontMoneyMentor/src/app/components/usuario/usuarioregistrar/usuarioregistrar.html
+++ b/FrontMoneyMentor/src/app/components/usuario/usuarioregistrar/usuarioregistrar.html
@@ -21,7 +21,7 @@
           <img src="/assets/img/logocortado.png" alt="Logo de la empresa" style="width: 120px" />
         </div>
         <div style="text-align: center; margin: 5%">
-          <h2 style="color: #4158a6">{{ edicion ? 'Editar usuario' : 'Registrar usuario'}}</h2>
+          <h2 style="color: #4158a6">{{ edicion ? 'Editar usuario' : 'Registrar usuario' }}</h2>
         </div>
 
         <div style="text-align: center; margin: 5%">
@@ -55,11 +55,21 @@
               </mat-error>
             </mat-form-field>
 
+            <!-- 🔵 MENSAJE SI EL CORREO YA EXISTE -->
+            <div *ngIf="mensajeError" style="color: #d32f2f; font-size: 14px; margin-top: 10px">
+              {{ mensajeError }}
+            </div>
+
             <br />
             <ng-container *ngIf="!edicion">
               <mat-form-field appearance="outline" class="custom-field">
                 <mat-label>Contraseña</mat-label>
-                <input matInput formControlName="contrasenia" type="password" placeholder="contrasenia" />
+                <input
+                  matInput
+                  formControlName="contrasenia"
+                  type="password"
+                  placeholder="contrasenia"
+                />
                 <mat-error *ngIf="form.get('contrasenia')?.hasError('required')">
                   La contraseña es obligatoria
                 </mat-error>
@@ -77,7 +87,6 @@
               <button mat-raised-button color="primary" class="custom-button" (click)="aceptar()">
                 {{ edicion ? 'Actualizar' : 'Registrar' }}
               </button>
-              
             </div>
           </form>
         </div>
