--- a/FrontMoneyMentor/src/app/components/balance/balance-list/balance-list.html
+++ b/FrontMoneyMentor/src/app/components/balance/balance-list/balance-list.html
@@ -41,7 +41,7 @@
             <ng-container matColumnDef="c8">
                 <th mat-header-cell *matHeaderCellDef> Actualizar </th>
                 <td mat-cell *matCellDef="let element">
-                    <button matButton [routerLink]="['edits', element.idBalance]">
+                    <button mat-icon-button color="primary" [routerLink]="['edits', element.idBalance]">
                         <mat-icon>edit</mat-icon>
                     </button>
                 </td>
@@ -50,7 +50,7 @@
             <ng-container matColumnDef="c9">
                 <th mat-header-cell *matHeaderCellDef>Eliminar</th>
                 <td mat-cell *matCellDef="let element">
-                    <button matButton (click)="eliminar(element.idBalance)">
+                    <button mat-icon-button color="warn" (click)="eliminar(element.idBalance)">
                         <mat-icon>delete</mat-icon></button>
                 </td>
             </ng-container>
